--- a/package.json
+++ b/package.json
@@ -85,6 +85,9 @@
     "http-server": "^0.9.0",
     "ie-shim": "^0.1.0",
     "jasmine-core": "^2.5.2",
+    "ng2-pagination": "^1.0.1",
+    "ng2-rating": "0.0.7",
+    "ng2-simple-page-scroll": "^2.0.0",
     "reflect-metadata": "^0.1.9",
     "rxjs": "~5.0.2",
     "zone.js": "~0.7.4"
@@ -123,6 +126,9 @@
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "1.8.1",
     "ngc-webpack": "^1.0.2",
+    "node-sass": "3.10.1",
+    "sass-loader": "^3.1.2",
+    "style-loader": "^0.13.1",
     "npm-run-all": "^4.0.0",
     "parse5": "^3.0.1",
     "protractor": "^4.0.10",
@@ -131,7 +137,6 @@
     "script-ext-html-webpack-plugin": "^1.3.2",
     "source-map-loader": "^0.1.5",
     "string-replace-loader": "1.0.5",
-    "style-loader": "^0.13.1",
     "to-string-loader": "^1.1.4",
     "ts-helpers": "1.1.2",
     "ts-node": "^2.0.0",
